Issue #5981: Fix some float.fromhex bugs related to inf and nan handling.